[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/FollowingEnemy.gd" type="Script" id=1]
[ext_resource path="res://Enemies/enemy placeholder 2.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 39.881, 44.008 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 605.487, 163 )

[node name="FollowingEnemy" type="Node2D" groups=[
"Enemies",
]]

script = ExtResource( 1 )
movespeed = 2
pathLooped = true
speed = 2
loseAggroDistance = 550
gravity = 12

[node name="Enemy" type="KinematicBody2D" parent="." index="0"]

position = Vector2( -16, 16 )
scale = Vector2( 0.5, 0.5 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy" index="0"]

shape = SubResource( 1 )

[node name="Sprites" type="Node2D" parent="Enemy" index="1"]

[node name="Sprite" type="Sprite" parent="Enemy/Sprites" index="0"]

modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 1.44668, -1.22334 )
scale = Vector2( 0.163713, 0.192684 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="Area2D" type="Area2D" parent="Enemy" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Area2D" index="0"]

shape = SubResource( 2 )

[node name="VisionRange" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionRange" index="0"]

position = Vector2( -0.634242, 0.883445 )
scale = Vector2( 0.421758, 0.583635 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Enemy/Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="VisionRange" to="." method="_on_VisionRange_body_entered"]


